--- a/appJorge/ios/Podfile
+++ b/appJorge/ios/Podfile
@@ -10,6 +10,8 @@ target 'appJorge' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'appJorgeTests' do
     inherit! :complete
     # Pods for testing
