--- a/appJorge/package.json
+++ b/appJorge/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-elements": "^2.3.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
